[futures-as-response] Refactor to return CompletableFutures for word-occurences
* Added the endpoint in the controller